--- a/download_MD current.ipynb
+++ b/download_MD current.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -49,19 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "start_dt = date(2018, 1, 2)\n",
-    "end_dt = date(2018, 1, 3)\n"
+    "start_dt = date(2018, 1, 11)\n",
+    "end_dt = date(2018, 1, 16)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -71,11 +71,12 @@
     "    date = dt.strftime(\"%Y-%m-%d\")\n",
     "    date_s = date.replace('-','')\n",
     "    file_name = date_s +'000000-'+ date_s +'234500-Surface.csv'\n",
+    "    directory = 'P:/Hong Kong/ENL/PROJECTS/355482 HKIA 3RS ET Services/09 Env Monitoring/02 Impact Data/06 High Speed Ferry/201801/MD Current Data/'\n",
     "    url_filled = url.format(date, \"00:00\", date, \"23:45\")\n",
     "    \n",
     "    r = requests.get(url_filled, proxies=proxies)\n",
     "    \n",
-    "    with open(file_name, \"wb\") as code:\n",
+    "    with open(directory + file_name, \"wb\") as code:\n",
     "        code.write(r.content)"
    ]
   },
